--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,9 @@
 *.sh.e*
 *.sh.o*
 .nfs*
-mpi_openmp_FSO.sh
+
+# ignora il file per il submit del job perché tra me e annina andiamo a modificarne sempre i params
+*mpi_openmp_FSO.sh
 
 # Everything under the FishSchoolSearch directory
 FishSchoolSearch/
